config DNS completa

--- a/Gestion_SI/Mantenimiento/Automatizacion/Redes/configs/DNS/named.conf
+++ b/Gestion_SI/Mantenimiento/Automatizacion/Redes/configs/DNS/named.conf
@@ -18,8 +18,9 @@ options {
 	memstatistics-file "/var/named/data/named_mem_stats.txt";
 	recursing-file  "/var/named/data/named.recursing";
 	secroots-file   "/var/named/data/named.secroots";
-	allow-query     { localhost; 192.168.0.0/24; };
-
+	allow-query	  { localhost; 192.168.0.0/24; };
+	forward first;
+	forwarders { 8.8.8.8; };
 	/* 
 	 - If you are building an AUTHORITATIVE DNS server, do NOT enable recursion.
 	 - If you are building a RECURSIVE (caching) DNS server, you need to enable 
@@ -56,20 +57,22 @@ zone "." IN {
 	file "named.ca";
 };
 
-zone "dns.overclode.sibim" IN{
-	type master;
+//resuelve de dns a IP
+zone "overclode.sibim" IN{
+ 	type master;
 	file "/var/named/forward.overclode.sibim"; //directorio donde guardo los datos
 	allow-update { none;  };
 };
 
-zone "0.168.192.in-addr.arpa" IN {
+//de ip a dns
+zone "0.168.192.in-addr.arpa" IN { 	
 	type master;
 	file "/var/named/reverse.overclode.sibim";
 	allow-update { none;  };
 };
 
 
-include "/etc/named.rfc1912.zones";
+//include "/etc/named.rfc1912.zones";
 include "/etc/named.root.key";
 
 
