--- a/Gestion_SI/.my.cnf
+++ b/Gestion_SI/.my.cnf
@@ -1,3 +1,4 @@
+#/root/.my.cnf : archivo que contiene las credenciales para un usuario con permisos de respaldo y restauración.
 [mysqldump]
-user=admin
-password=overcl0de-4DM
+user=bkp_user
+password=contrasenasegura
